# token-tracker

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: launch.cjs  postinstall.cjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  poller.rs  storage.rs  tray.rs
src-tauri/src/api/: anthropic.rs  claude_code.rs  mod.rs  openai.rs
src/components/: AlertSettings.tsx  Dashboard.tsx  ModelBreakdown.tsx  ProviderCard.tsx  UsageChart.tsx
src/hooks/: useAlerts.ts  useUsageData.ts
src/store/: settingsStore.ts
